website: translate Status report Q4 2026 to russian
Differential Revision: https://reviews.freebsd.org/D55437

--- a/website/content/ru/status/_index.adoc
+++ b/website/content/ru/status/_index.adoc
@@ -23,6 +23,7 @@ include::shared/ru/urls.adoc[]
 
 == 2025
 
+* link:report-2025-10-2025-12/[Октябрь 2025 - Декабрь 2025]
 * link:../../status/report-2025-07-2025-09/[Июль 2025 - Сентябрь 2025]
 * link:../../status/report-2025-04-2025-06/[Апрель 2025 - Июнь 2025]
 * link:../../status/report-2025-01-2025-03/[Январь 2025 - Март 2025]
@@ -198,5 +199,5 @@ include::shared/ru/urls.adoc[]
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (30.11.2025): f1086ae6be41ec3ba01b23bd4f64171a70d21887
+// Original EN revision (21.02.2026): 7abc67487b744d81963fd62471d1544f8653d0df
 //
