EC2 AMIs: Add .trim() to filtering script
The FreeBSD website uses HTML Tidy, which adds whitespace inside the
table of EC2 AMIs; I didn't notice this when I was testing locally
because it didn't run there.  This results in the filtering breaking
since e.g. "ufs" does not match "\nufs\n".

Addding .trim() to the filtering script removes the extra whitespace
which HTML Tidy added.

PR:	293397

--- a/website/content/en/releases/15.0R/ec2-ami-ids/release.adoc
+++ b/website/content/en/releases/15.0R/ec2-ami-ids/release.adoc
@@ -578,10 +578,10 @@ function filter_table() {
 	const filter_fs_val = document.getElementById('filter_fs').value;
 	for (row of rows) {
 		const cells = row.getElementsByTagName('td');
-		const region = cells[0].textContent;
-		const arch = cells[1].textContent;
-		const flavour = cells[2].textContent;
-		const fs = cells[3].textContent;
+		const region = cells[0].textContent.trim();
+		const arch = cells[1].textContent.trim();
+		const flavour = cells[2].textContent.trim();
+		const fs = cells[3].textContent.trim();
 		visible = 1;
 		console.log(region);
 		if (region != filter_region_val && filter_region_val != "")
