--- a/website/content/ru/status/report-2025-10-2025-12/frdp.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/frdp.adoc
@@ -9,18 +9,18 @@ link:https://github.com/freebsd-doc-ru/freebsd-doc/discussions[Сайт прое
 Контакт: Владлен Пополитов (Vladlen Popolitov) <vladlen@FreeBSD.org>
 
 Текущая цель Проекта русскоязычной документации FreeBSD — предоставлять актуальные русские переводы наиболее важных частей документации FreeBSD (FAQ, Руководство, содержимое веб-сайта).
-Это необходимо для поддержки русскоязычных пользователей качественными официальными техническими материалами и для увеличения распространения операционной системы по всему миру.
-Мы надеемся, что эта инициатива получит поддержку в русскоязычном сообществе FreeBSD и приведет к увеличению объема переведенных материалов.
+Это необходимо для поддержки русскоязычных пользователей качественными официальными техническими материалами и для расширения распространённости операционной системы по всему миру.
+Мы надеемся, что эта инициатива получит поддержку в русскоязычном сообществе FreeBSD и приведёт к увеличению объёма переведённых материалов.
 
 В течение последнего квартала:
 
-* 100% текста в Weblate было переведено, с учетом всех последних изменений.
-* Завершен процесс рецензирования и обновления оставшейся документации.
+* Переведено 100% текста, находящегося в Weblate, включая последние изменения.
+* Завершён процесс рецензирования и обновления оставшейся документации.
 Все 47 документов (книги и статьи) теперь полностью синхронизированы на link:https://docs.freebsd.org/ru/[сайте русскоязычной документации].
 * Восстановлен русскоязычный раздел сайта link:https://www.FreeBSD.org/ru[www.FreeBSD.org/ru], обновлено примерно 90% его страниц.
 * Новости, анонсы событий и ссылки на прессу теперь переводятся и публикуются на русскоязычном сайте.
-Кроме того, начиная с января 2025 года, на русский язык переводятся Errata Notices (уведомления об опечатках/ошибках) и Security Advisories (уведомления безопасности).
-* Для релиза FreeBSD 15.0 полный комплект документации к релизу (примечания к релизу, errata и т.д.) был своевременно переведен на русский язык параллельно с оригинальными английскими текстами.
+Кроме того, начиная с января 2025 года, на русский язык переводятся Errata Notices (уведомления об ошибках) и Security Advisories (бюллетени безопасности).
+* Для релиза FreeBSD 15.0 полный комплект документации к релизу (примечания к релизу, errata и т.д.) был своевременно переведён на русский язык параллельно с оригинальными английскими текстами.
 * Инициирован проект по переводу справочных страниц (man pages) FreeBSD, который находится на самой ранней стадии.
   Предварительные примеры можно найти на link:https://github.com/freebsd-doc-ru/freebsd-man-ru[GitHub].
 
@@ -37,9 +37,9 @@ link:https://github.com/freebsd-doc-ru/freebsd-doc/discussions[Сайт прое
 План на следующий квартал:
 
 * Завершить обновление всех оставшихся страниц на русскоязычном веб-сайте.
-* Наладить устойчивый рабочий процесс для поддержания переведенного контента (Новости, События, Пресса, Errata, Уведомления безопасности) в актуальном состоянии и его публикации на сайте в кратчайшие сроки.
+* Наладить устойчивый рабочий процесс для поддержания переведённого контента (Новости, События, Пресса, Errata, Бюллетени безопасности) в актуальном состоянии и его публикации на сайте в кратчайшие сроки.
 * Перевести новое "Руководство по доступности FreeBSD" (FreeBSD Accessibility Handbook), как только оно станет доступно для перевода в Weblate.
-* Продолжить текущий проект по переводу справочных страниц (man pages) FreeBSD.
+* Продолжить текущий проект по переводу страниц Справочника FreeBSD.
 
 Ознакомьтесь с https://docs.freebsd.org/ru/books/fdp-primer/translations/[официальным руководством по переводу], если вы хотите помочь.
 
