--- a/website/content/ru/status/report-2025-10-2025-12/freebsd-git-weekly.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/freebsd-git-weekly.adoc
@@ -5,12 +5,12 @@ link:https://freebsd-git-weekly.tarsnap.net/[FreeBSD Git Weekly] URL: link:https
 
 Контакт: Graham Percival <gperciva@tarsnap.com>
 
-Это еженедельные списки коммитов в link:https://cgit.freebsd.org/src/[дерево исходных текстов FreeBSD], разбитые по категориям, таким как "документация", "поддержка оборудования", "тестирование" и "ядро".
-Мы также включаем ежеквартальные списки категоризированных коммитов для тех, кто предпочитает видеть три месяца разработки сразу.
+Это еженедельные перечни коммитов в link:https://cgit.freebsd.org/src/[дерево исходных текстов FreeBSD], разбитые по категориям, таким как "документация", "поддержка оборудования", "тестирование" и "ядро".
+Мы также включаем ежеквартальные перечни категоризированных коммитов для тех, кто предпочитает видеть три месяца разработки сразу.
 
 Наша цель — упростить разработчикам и пользователям отслеживание изменений в FreeBSD, которые имеют к ним отношение, без необходимости подписываться на список рассылки dev-commits-src-main и просматривать каждый коммит, попадающий в их почтовый ящик.
 
-Существует список рассылки link:https://www.tarsnap.com/lists.html[freebsd-git-weekly@tarsnap.com], который предоставляет анонсы о каждом отчете.
+Существует список рассылки link:https://www.tarsnap.com/lists.html[freebsd-git-weekly@tarsnap.com], который предоставляет анонсы о каждом отчёте.
 
 Спонсор: Tarsnap Backup Inc.
 
