--- a/website/content/ru/status/report-2025-10-2025-12/jdk21default.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/jdk21default.adoc
@@ -1,4 +1,4 @@
-=== Сделать OpenJDK 21 версией JAVA по умолчанию (Make OpenJDK 21 the default JAVA_VERSION)
+=== Сделать OpenJDK 21 версией JAVA, используемойпо умолчанию (Make OpenJDK 21 the default JAVA_VERSION)
 
 Ссылки:
 link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=272855[Запрос 272855] URL: link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=272855[] +
@@ -6,9 +6,9 @@ link:https://docs.google.com/spreadsheets/d/17hmRQ0ShY4SHHVEkQBVxqK2G88fPZLriTzO
 
 Контакт: Ronald Klop <ronald@FreeBSD.org>
 
-Версией Java по умолчанию (JAVA_VERSION) в портах FreeBSD все еще является OpenJDK 8.
-Пришло время обновить ее до более современной версии, такой как OpenJDK 21.
-Нам необходимо протестировать и исправить все порты, использующие Java для сборки или работы с JDK 21, либо закрепить (pin) JAVA_VERSION в порту на последнюю поддерживаемую версию.
+Версией Java, используемой по умолчанию (JAVA_VERSION) в портах FreeBSD, всё ещё является OpenJDK 8.
+Пришло время обновить её до более современной версии, такой как OpenJDK 21.
+Нам необходимо протестировать и исправить все порты, использующие Java для сборки или работы с JDK 21, либо закрепить (pin) за JAVA_VERSION, используемом в порту, последнюю поддерживаемую версию.
 
 Работа отслеживается в PR 272855 и в Google Таблице для более подробной информации.
 Уже исправлено более половины портов, которые не прошли тестовый прогон.
@@ -19,9 +19,9 @@ link:https://docs.google.com/spreadsheets/d/17hmRQ0ShY4SHHVEkQBVxqK2G88fPZLriTzO
 План:
 
 * Проверить последние 12 портов и создать PR или сделать коммит
-* Зафиксировать PR, по которым истек срок ожидания ответа от мейнтейнера
-* Запросить еще один экспериментальный прогон (exp-run)
-* Если все готово, увеличить JAVA_VERSION
+* Зафиксировать PR, по которым истёк срок ожидания ответа от мейнтейнера
+* Запросить ещё один экспериментальный прогон (exp-run)
+* Если всё готово, увеличить JAVA_VERSION
 
 //
 // The FreeBSD Russian Documentation Project
