--- a/website/content/ru/status/report-2025-10-2025-12/sylve.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/sylve.adoc
@@ -8,18 +8,18 @@ link:https://discord.gg/bJB826JvXK[Discord] URL: link:https://discord.gg/bJB826J
 
 Контакт: Hayzam Sherif <hayzam@alchemilla.io>
 
-Sylve — это современная, унифицированная платформа управления системой для FreeBSD, вдохновленная Proxmox.
+Sylve — это современная унифицированная платформа управления системой для FreeBSD, вдохновленная Proxmox.
 Она предоставляет интегрированный веб-интерфейс для управления виртуальными машинами (через Bhyve), клетками (Jails), хранилищем ZFS, сетью и межсетевым экраном.
 
 Бэкенд реализован на Go, в то время как фронтенд построен с использованием SvelteKit, Tailwind CSS и компонентов UI ShadCN.
 
-Проект делает акцент на минимальном занимаемом месте в системе.
+Проект делает акцент на минимализации места, занимаемого в системе.
 По умолчанию требуются только следующие пакеты:
 
 - package:sysutils/smartmontools[]
 - package:sysutils/tmux[]
 
-Опциональные зависимости времени выполнения, требуемые только при использовании соответствующих функций, включают:
+Опциональные зависимости времени выполнения, требуемые только при использовании соответствующих функций, включают в себя:
 
 - package:devel/libvirt[] для виртуализации
 - package:devel/qemu[devel/qemu-tools] для управления образами дисков
@@ -27,26 +27,26 @@ Sylve — это современная, унифицированная плат
 - package:sysutils/swtpm[] для поддержки эмуляции TPM
 - package:net/dnsmasq[] для служб DHCP и DNS
 
-==== Основные достижения за 4 квартал
+==== Основные достижения за IV квартал
 
 ===== Хранилище
 
-* Управление ZFS: теперь мы используем link:https://github.com/alchemillahq/gzfs[GitHub - gzfs], обертку на Go вокруг CLI-инструментов zfs/zpool/zdb, обеспечивающую полную поддержку создания и управления пулами и наборами данных ZFS.
-  Это улучшило производительность и надежность по сравнению с нашей предыдущей реализацией.
+* Управление ZFS: теперь мы используем link:https://github.com/alchemillahq/gzfs[GitHub - gzfs], обертку на Go для инструментария командной строки zfs/zpool/zdb, обеспечивающую полную поддержку создания и управления пулами и наборами данных ZFS.
+  Это улучшило производительность и надёжность по сравнению с нашей предыдущей реализацией.
 
-* Управление хранилищем для ВМ и клеток: во время инициализации пользователь может выбрать пул(ы), в которых будут создаваться ВМ (диски/zvol'ы) и клетки (наборы данных), и все создание дисков/наборов данных будет выполняться автоматически "под капотом".
+* Управление хранилищем для ВМ и клеток: во время инициализации пользователь может выбрать пул(ы), в которых будут создаваться ВМ (диски/zvol'ы) и клетки (наборы данных), а всё создание дисков/наборов данных будет выполняться автоматически "под капотом".
 
 ===== Клетки (Jails)
 
 * Добавлена поддержка Linux-клеток с использованием Linuxulator во FreeBSD.
   Пользователи могут создавать, управлять и отслеживать Linux-клетки через веб-интерфейс.
-  Это все еще считается экспериментальным, но мы провели обширное тестирование с Rocky Linux и Alpine.
+  Это всё ещё считается экспериментальным, но мы провели обширное тестирование с Rocky Linux и Alpine.
 
 * Добавлен ряд улучшений для клеток, где теперь люди могут указать гораздо больше параметров при создании/редактировании/просмотре "толстых" клеток (thick jails).
 
 ===== Виртуальные машины
 
-* Поддержка Cloud-Init: Sylve теперь поддерживает Cloud-Init для автоматического provisioning ВМ.
+* Поддержка Cloud-Init: Sylve теперь поддерживает Cloud-Init для автоматического предоставления ВМ.
   Пользователи могут предоставить конфигурацию Cloud-Init во время создания/редактирования ВМ.
 
 * Последовательная консоль (Serial Console): Реализована веб-консоль для ВМ, позволяющая пользователям получать доступ к консоли ВМ непосредственно из интерфейса Sylve.
@@ -61,22 +61,22 @@ Sylve — это современная, унифицированная плат
 
 ===== Общее
 
-Sylve теперь требует FreeBSD 15.0 или новее, так как мы теперь зависим от таких функций, как метаданные клеток (Jail metadata) и ZFS v2.4.0+, которая включает вывод в формате JSON для многих команд, на которые мы полагаемся.
+Sylve теперь требует FreeBSD версии 15.0 и выше, так как мы теперь зависим от таких функций, как метаданные клеток (Jail metadata) и ZFS v2.4.0+, которая включает вывод в формате JSON для многих команд, на которые мы полагаемся.
 
-Мы также сделали многочисленные улучшения пользовательского интерфейса и пользовательского опыта (UI/UX), оптимизации производительности и исправления ошибок по всей платформе, некоторые из них включают:
+Мы также выполнили многочисленные улучшения пользовательского интерфейса и пользовательского опыта (UI/UX), оптимизации производительности и исправления ошибок по всей платформе, некоторые из них включают:
 
 * Улучшенное построение графиков с помощью библиотеки link:https://echarts.apache.org[ECharts] для лучшей производительности и интерактивности.
 * Улучшенные функции доступности для обеспечения соответствия стандартам WCAG.
 * Поддержка интернационализации (i18n) с помощью link:https://wuchale.dev/[Wuchale], начиная с переводов интерфейса на хинди (hi).
 * Оптимизации бэкенда для более быстрого извлечения данных и сокращения времени загрузки.
-* Удалено несколько зависимостей фронтенда (в частности, tanstack) в пользу более легких альтернатив для уменьшения общего размера бандла и улучшения времени загрузки.
+* Удалено несколько зависимостей фронтенда (в частности, tanstack) в пользу более лёгких альтернатив для уменьшения общего размера пакета и улучшения времени загрузки.
 
 ==== Обновление дорожной карты
 
-Некоторая работа по кластеризации все еще продолжается.
-После ее завершения мы выпустим полную документацию по проекту и начнем упаковывать Sylve для простой установки через pkg.
+Некоторая работа по кластеризации всё ещё продолжается.
+После её завершения мы выпустим полную документацию по проекту и начнём упаковывать Sylve для простой установки через pkg.
 
-Мы также разрабатываем новую, тесно интегрированную систему резервного копирования в рамках монорепозитория Sylve, обеспечивающую простое резервное копирование и восстановление ВМ, клеток и конфигураций.
+Мы также разрабатываем новую, высокоинтегрированную систему резервного копирования в рамках монорепозитория Sylve, обеспечивающую простое резервное копирование и восстановление ВМ, клеток и конфигураций.
 
 Спонсор: Фонд FreeBSD
 
