--- a/website/content/ru/status/report-2025-10-2025-12/_index.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/_index.adoc
@@ -1,5 +1,5 @@
 ---
-title: "Отчет о состоянии работ FreeBSD за четвертый квартал 2025"
+title: "Отчёт о состоянии работ FreeBSD за четвёртый квартал 2025"
 sidenav: about
 ---
 
@@ -25,7 +25,7 @@ toc::[]
 '''
 
 [[FreeBSD-Team-Reports]]
-== Отчеты команд FreeBSD
+== Отчёты команд FreeBSD
 
 {FreeBSD-Team-Reports-desc}
 
