--- a/website/content/ru/status/report-2025-10-2025-12/audio.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/audio.adoc
@@ -3,7 +3,7 @@
 
 Контакт: Christos Margiolis <christos@FreeBSD.org>
 
-Я работаю над звуковым стеком с 1 квартала 2024 года. Ниже приведен список предыдущих отчетов о состоянии дел:
+Я работаю над звуковым стеком с 1 квартала 2024 года. Ниже приведён список предыдущих отчётов о состоянии дел:
 
 link:https://www.freebsd.org/status/report-2024-01-2024-03/#_audio_stack_improvements[2024Q1] URL: link:https://www.freebsd.org/status/report-2024-01-2024-03/#_audio_stack_improvements[] +
 link:https://www.freebsd.org/status/report-2024-04-2024-06/#_audio_stack_improvements[2024Q2] URL: link:https://www.freebsd.org/status/report-2024-04-2024-06/#_audio_stack_improvements[] +
@@ -24,7 +24,7 @@ link:https://www.freebsd.org/status/report-2025-07-2025-09/#_audio_stack_improve
 * Реализована поддержка man:kqueue[2] для man:sound[4] (link:https://cgit.freebsd.org/src/commit/?id=4181bf9d18166c4061bfa137b8a46972a5a55f67[коммит]).
 * Несколько переписываний, исправлений и чисток кода MIDI.
 
-Вы также можете следить за процессом разработки в рассылке link:https://lists.freebsd.org/subscription/freebsd-multimedia[freebsd-multimedia@], куда я отправляю регулярные отчеты.
+Вы также можете следить за процессом разработки в рассылке link:https://lists.freebsd.org/subscription/freebsd-multimedia[freebsd-multimedia@], куда я отправляю регулярные отчёты.
 
 Спонсор: Фонд FreeBSD
 
