--- a/website/content/ru/status/report-2025-10-2025-12/foundation-sta.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/foundation-sta.adoc
@@ -12,36 +12,36 @@
 ==== Обновление за 4 квартал
 
 Все пять рабочих пакетов завершены к концу декабря 2025 года, и проект закрыт.
-На момент написания (середина декабря) некоторые элементы все еще находятся на рассмотрении, и они были переданы сотрудникам Фонда для надлежащего внедрения.
+На момент написания (середина декабря) некоторые элементы всё ещё находятся на рассмотрении, и они были переданы сотрудникам Фонда для надлежащего внедрения.
 
 ===== Рабочий пакет A: Сокращение технического долга (Technical Debt Reduction)
 
-Этот рабочий пакет был завершен в сентябре 2025 года.
+Этот рабочий пакет был завершён в сентябре 2025 года.
 Проект успешно выполнялся параллельно с созданием команды по управлению исходным кодом (Source Management team) проекта FreeBSD, поскольку они создавали и внедряли свои новые процессы, чтобы сделать управление ошибками более простым и устойчивым.
 
-Объем работ был разработан совместно с srcmgr@.
+Объём работ был определён совместно с srcmgr@.
 
-Элементы работы следующие:
+Элементы работы таковы:
 
-* Создать панель мониторинга для команды по управлению исходным кодом, чтобы получить более четкую картину отставания по ошибкам (bug backlog) и того, насколько эффективно оно управляется (например, время до первого внимания для новых ошибок).
+* Создать панель мониторинга для команды по управлению исходным кодом, чтобы получить более чёткую картину отставания по ошибкам (bug backlog) и того, насколько эффективно оно управляется (например, время до первого внимания для новых ошибок).
 ** Результат: https://grimoire.freebsd.org/
 * Обновить Bugzilla до поддерживаемой версии для повышения безопасности и использования новых функций.
 ** Результат: https://wiki.freebsd.org/Bugzilla/Roadmap
-* Создать метод для автоматического применения патчей.
+* Создать метод для автоматического применения исправлений.
 ** Результат: https://github.com/linimon/patchQA
 * Создать вышестоящую (upstream) документацию по запуску GrimoireLab (панель управления ошибками) на FreeBSD.
 ** Результат: https://github.com/chaoss/grimoirelab/blob/main/FreeBSD.md
 
 ===== Рабочий пакет B: Сборки с нулевым доверием (Zero Trust Builds)
 
-Этот рабочий пакет сделал возможным воспроизводимую сборку FreeBSD без необходимости привилегий root.
+Этот рабочий пакет сделал возможным осуществлять воспроизводимую сборку FreeBSD без необходимости использования полномочий администратора системы.
 
-Детальный объем работ был разработан совместно с core@, srcmgr@, secteam@.
+Детальный объём работ был сформирован совместно с core@, srcmgr@, secteam@.
 
-Элементы работы следующие:
+Элементы работы таковы:
 
 * Должны быть выполнены
-** Сборка без root для всех вариантов/артефактов релиза из исходных кодов (завершено)
+** Сборка без полномочий администратора системы для всех вариантов/артефактов релиза из исходных кодов (завершено)
 ** Артефакты из исходных кодов собираются воспроизводимо (завершено)
 ** Формализация и документирование make world и release.sh (на рассмотрении)
 * Желательны
@@ -56,11 +56,11 @@
 
 ===== Рабочий пакет C: Автоматизация CI/CD
 
-Этот рабочий пакет улучшил автоматизацию CI/CD для оптимизации доставки и эксплуатации программного обеспечения, как нового, так и существующего, путем модернизации и повышения безопасности существующей системы CI/CD и ее расширения для охвата сторонних пакетов в коллекции портов FreeBSD.
+Этот рабочий пакет улучшил автоматизацию CI/CD для оптимизации доставки и эксплуатации программного обеспечения, как нового, так и существующего, посредством модернизации и повышения безопасности существующей системы CI/CD и её расширения для охвата сторонних пакетов в коллекции портов FreeBSD.
 
-Детальный объем работ был разработан совместно с core@, srcmgr@, portmgr@, doceng@.
+Детальный объём работ был сформирован совместно с core@, srcmgr@, portmgr@, doceng@.
 
-Элементы работы следующие:
+Элементы работы таковы:
 
 * Должны быть выполнены
 ** Повышение качества входящих коммитов (на рассмотрении)
@@ -83,22 +83,22 @@
 Мы добавили поддержку формата OSV (Open Source Vulnerability), который является стандартизированным способом описания уязвимостей безопасности.
 Мы также создали базовые инструменты для загрузки информации об уязвимостях из глобальных баз данных безопасности, с особым вниманием к словарю NIST Common Platform Enumeration (CPE).
 
-Инструмент man:pkg[8] теперь может создавать и читать строки CPE, хотя он еще не поддерживает формат JSON для CPE.
-Мы написали новые тестовые примеры для разбора CPE и OSV и обновили существующие тесты аудита безопасности man:pkg[8].
+Инструмент man:pkg[8] теперь может создавать и читать строки CPE, хотя он ещё не поддерживает формат JSON для CPE.
+Мы написали новые тестовые примеры для обработки CPE и OSV и обновили существующие тесты аудита безопасности man:pkg[8].
 Кроме того, мы создали тестовый репозиторий, который конвертирует данные об уязвимостях FreeBSD в формат OSV и работает с man:pkg[8].
 Этот тестовый репозиторий был проверен на точность, и процесс конвертации из старого формата VuXML FreeBSD в новый формат OSV теперь является простым.
 
-Детальный объем работ был разработан совместно с core@, portmgr@, pkgmgr@, secteam@.
+Детальный объём работ был сформирован совместно с core@, portmgr@, pkgmgr@, secteam@.
 
-Элементы работы следующие:
+Элементы работы таковы:
 
 * Должны быть выполнены
 ** Новый формат базы данных (завершено)
 ** Настройка 2+ экземпляров базы данных (исключено из-за нехватки времени)
-** Миграция данных из старой базы данных в новую (POC завершен)
+** Миграция данных из старой базы данных в новую (POC завершён)
 ** Добавление поддержки нового формата в man:pkg[8] (завершено)
 ** Взаимодействие с вышестоящими проектами (upstream engagement) (завершено)
-** SBOM по требованию (на рассмотрении)
+** <<_freebsd_software_bill_of_materials,SBOM>> по требованию (на рассмотрении)
 ** Документирование настройки целей сборки и тестирования (на рассмотрении)
 ** Интеграция сторонних тестовых целей (исключено из-за нехватки времени)
 ** Непрерывное тестирование (на рассмотрении)
@@ -107,21 +107,21 @@
 
 ===== Рабочий пакет E: Улучшения SBOM
 
-Этот рабочий пакет предоставил фундаментальные улучшения инструментов и процессов для генерации спецификации программного обеспечения FreeBSD (SBOM).
+Этот рабочий пакет дал фундаментальные улучшения инструментов и процессов для генерации спецификации программного обеспечения FreeBSD (<<_freebsd_software_bill_of_materials,SBOM>>).
 
 Мы внесли изменения (в настоящее время на рассмотрении) для консолидации отдельных данных о происхождении как из базовой системы, так и из деревьев портов в единое, более высокоуровневое представление.
-Мы также создали инструментарий, который может сканировать дерево исходных текстов FreeBSD и генерировать отчет SBOM, охватывающий весь стек программного обеспечения.
+Мы также создали инструментарий, который может сканировать дерево исходных текстов FreeBSD и генерировать отчёт SBOM, охватывающий весь стек программного обеспечения.
 
-Дерево портов FreeBSD уже имело хорошие метаданные для создания SBOM и устоявшиеся инструменты для отслеживания зависимостей пакетов, поэтому наши решения SBOM для портов теперь зрелы и находятся на стадии рассмотрения.
+Дерево портов FreeBSD уже имело хорошие метаданные для создания SBOM и устоявшиеся инструменты для отслеживания зависимостей пакетов, поэтому наши решения SBOM для портов теперь являются зрелыми и находятся на стадии рассмотрения.
 Однако базовая система FreeBSD использует совершенно другую систему сборки, а информация для SBOM разбросана по всему репозиторию.
 Основная проблема здесь заключалась в сборе всех зависимостей и информации о пакетах в одном месте.
-В результате создание SBOM для базовой системы FreeBSD все еще находится на стадии технического предварительного просмотра, и в настоящее время доступны только примерные данные.
+В результате создание SBOM для базовой системы FreeBSD всё ещё находится на стадии технического предварительного просмотра, и в настоящее время доступны только примерные данные.
 
-На начало 2026 года был заказан последующий проект, чтобы опираться на эти фундаментальные элементы и разработать полноценное, надежное решение для SBOM.
+На начало 2026 года был заказан последующий проект, опирающийся на эти фундаментальные элементы и направленный на разработку полноценного, надёжного решения для SBOM.
 
-Детальный объем работ был разработан совместно с core@, portmgr@, pkgmgr@, secteam@, releng@.
+Детальный объём работ был сформирован совместно с core@, portmgr@, pkgmgr@, secteam@, releng@.
 
-Элементы работы следующие:
+Элементы работы таковы:
 
 * Должны быть выполнены
 ** Оценка проектов/решений, доступных в более широкой экосистеме (завершено)
