--- a/website/content/ru/status/report-2025-10-2025-12/gcc.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/gcc.adoc
@@ -1,4 +1,4 @@
-=== GCC на FreeBSD
+=== GCC в FreeBSD
 
 Ссылки: +
 link:https://gcc.gnu.org/[Проект GCC] URL: link:https://gcc.gnu.org/[] +
@@ -9,14 +9,14 @@ link:https://gcc.gnu.org/gcc-16/[Серия релизов GCC 16] URL: link:htt
 
 Контакт: Lorenzo Salvadore <salvadore@FreeBSD.org>
 
-В этом квартале в отношении GCC на FreeBSD произошло совсем немного событий.
+В этом квартале в отношении GCC в FreeBSD произошло совсем немного событий.
 
-Главная новость заключается в том, что link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=281091[экспериментальный прогон (exp-run) для обновления версии GCC по умолчанию с 13 на 14] наконец-то завершен.
-Это заняло больше времени, чем ожидалось, из-за некоторых ошибок сегментации, которые происходят в портах emacs только на самых последних версиях FreeBSD.
+Главная новость заключается в том, что link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=281091[экспериментальный прогон (exp-run) для обновления версии GCC по умолчанию с 13 на 14] наконец-то завершён.
+Это заняло больше времени, чем ожидалось, из-за некоторых проблем с аварийным завершением работы, которые происходят в портах emacs только на самых последних версиях FreeBSD.
 Поскольку обновление GCC_DEFAULT уже давно назрело, было решено на время привязать порты emacs к GCC 13, чтобы эта единственная ошибка не мешала остальной части дерева портов получить преимущества от более новой версии GCC по умолчанию.
 Пожалуйста, обратитесь к link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=288303[PR 288303] для получения дополнительной информации.
 
-GCC 15 уже есть в нашем дереве портов, и скоро начнется процесс перевода GCC_DEFAULT на 15-ю версию.
+GCC 15 уже есть в нашем дереве портов, и скоро начнётся процесс перевода GCC_DEFAULT на 15-ю версию.
 
 //
 // The FreeBSD Russian Documentation Project
