--- a/website/content/ru/status/report-2025-10-2025-12/hpc-ports-modernization.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/hpc-ports-modernization.adoc
@@ -9,29 +9,29 @@ link:https://kavocado.net/reports/[Ежемесячные отчеты о сос
 
 Контакт: Generic Rikka <rikka.goering@outlook.de>
 
-В течение этого квартала была проделана значительная работа по превращению FreeBSD в более практичную платформу для современных HPC-кластеров путем обновления ключевых компонентов стека Slurm + PMIx + PRRTE и предоставления их в качестве первоклассных портов.
+В течение этого квартала была проделана значительная работа по превращению FreeBSD в более практичную платформу для современных HPC-кластеров за счёт обновления ключевых компонентов стека Slurm + PMIx + PRRTE и предоставления их в качестве первоклассных портов.
 
-==== Выполненная работа
+==== Завершённые работы
 
-* Обновлен package:sysutils/slurm-wlm[] с версии 23.11.7 до 25.11.0, что соответствует последней долгосрочной серии вышестоящего проекта и значительно сокращает количество локальных патчей, необходимых для FreeBSD.
-* Обновлены rc.d-скрипты Slurm, чтобы `slurmctld` и `slurmd` лучше интегрировались с типичным развертыванием FreeBSD (настраиваемые каталоги конфигурации/логов, pid-файлы, помощники для проверки статуса и очистки).
-* Введены package:net/pmix[] и package:net/prrte[] как самостоятельные порты, и package:net/openmpi[] переключен на использование этих выделенных сред выполнения вместо копий, поставляемых внутри дистрибутива OpenMPI.
+* Обновлён package:sysutils/slurm-wlm[] с версии 23.11.7 до 25.11.0, что соответствует последней долгосрочной серии вышестоящего проекта и значительно сокращает количество локальных патчей, необходимых для FreeBSD.
+* Обновлены rc.d-скрипты Slurm, чтобы `slurmctld` и `slurmd` лучше интегрировались со стандартной конфигурацией FreeBSD (настраиваемые каталоги конфигурации/логов, pid-файлы, помощники для проверки статуса и очистки).
+* Введены package:net/pmix[] и package:net/prrte[] как самостоятельные порты, и package:net/openmpi[] переключён на использование этих выделенных сред выполнения вместо копий, поставляемых внутри дистрибутива OpenMPI.
   Это приближает FreeBSD к тому, как многие дистрибутивы Linux для HPC упаковывают стек среды выполнения MPI.
 * Добавлен package:sysutils/py-clustershell[], фреймворк на Python, широко используемый для масштабируемого администрирования кластеров, предоставляющий пользователям FreeBSD знакомый инструмент, встречающийся на многих производственных HPC-системах.
 
-==== Работа в процессе
+==== Выполняемые работы
 
 * Итерации по дополнительным улучшениям интеграции Slurm (плагины, настройки по умолчанию, документация), чтобы упростить развертывание Slurm на FreeBSD в реальных кластерах.
-* Расширение пользовательского стека HPC дополнительными инструментами, такими как тестовые фреймворки и утилиты, ориентированные на задания, чтобы FreeBSD могла служить реалистичной платформой для разработки и валидации HPC-программного обеспечения.
+* Расширение пользовательского стека HPC дополнительными инструментами, такими как тестовые фреймворки и утилиты, ориентированные на задания, чтобы FreeBSD могла служить реальной платформой для разработки и валидации HPC-программного обеспечения.
 * Портирование package:sysutils/mpifileutils[] и его зависимостей (package:devel/libcircle[], package:devel/lwgrp[], package:devel/lwgrpd[]) для предоставления файловых утилит, параллельных с использованием MPI, обычно используемых в больших HPC-файловых системах (в настоящее время на рассмотрении).
 * Добавление и доработка HPC-ориентированных инструментов на Python, включая package:benchmarks/py-reframe[] (фреймворк для регрессионного тестирования HPC) и продолжение работы над package:sysutils/py-clustershell[].
 * Начальная работа по переносу package:devel/spack[] на FreeBSD в качестве дополнительного инструмента для разработки и экспериментов с HPC-программным обеспечением, с целью улучшения совместимости с существующими HPC-рабочими процессами.
 
-==== Будущие планы
+==== Планы на будущее
 
 * Продолжать внимательно отслеживать выпуски вышестоящих проектов Slurm, PMIx и PRRTE, чтобы FreeBSD оставалась жизнеспособной платформой для сайтов, ожидающих современный стек MPI/Slurm.
 * Документировать "эталонную" настройку Slurm + OpenMPI + PMIx + PRRTE на FreeBSD, чтобы снизить барьер для новых сайтов, желающих экспериментировать с FreeBSD в контексте HPC.
-* Выявлять и устранять специфичные для FreeBSD пробелы или регрессии, чтобы гарантировать полноту функциональности и надежность программного стека на FreeBSD.
+* Выявлять и устранять специфичные для FreeBSD пробелы или регрессии, чтобы гарантировать полноту функциональности и надёжность программного стека в FreeBSD.
 
 //
 // The FreeBSD Russian Documentation Project
