--- a/website/content/ru/status/report-2025-10-2025-12/intro.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/intro.adoc
@@ -1,13 +1,13 @@
-Здесь представлен четвертый отчет о состоянии дел за 2025 год, содержащий 28 записей.
+Здесь представлен четвёртый отчёт о состоянии дел за 2025 год, содержащий 28 записей.
 
-Поскольку прием опоздавших материалов приводит к постоянным задержкам публикации отчетов на месяцы, было принято решение изменить этот процесс.
-Начиная со следующего квартала, крайний срок подачи отчетов устанавливается на 14-е число первого месяца после окончания квартала, и этот срок будет строго соблюдаться для всех, включая коммиттеров и команды.
-После этого полный отчет о состоянии дел будет публиковаться сразу после его сборки (предположительно до конца месяца) и будет содержать только те записи, которые были поданы в установленный срок.
+Поскольку приём опоздавших материалов приводит к постоянным задержкам публикации отчётов на месяцы, было принято решение изменить этот процесс.
+Начиная со следующего квартала, крайний срок подачи отчётов устанавливается на 14-е число первого месяца после окончания квартала, и этот срок будет строго соблюдаться для всех, включая коммиттеров и команды.
+После этого полный отчёт о состоянии дел будет публиковаться сразу после его сборки (предположительно до конца месяца) и будет содержать только те записи, которые были поданы в установленный срок.
 
-Отчеты больше не будут "выбиваться" из участников.
+Отчёты больше не будут "выбиваться" из участников.
 Если вы пропустили крайний срок, просто представьте более обширный отчет в следующем квартале.
 
-Эта новая стратегия должна помочь каждому отчету оставаться свежим, актуальным и своевременным.
+Эта новая стратегия должна помочь каждому отчёту оставаться свежим, актуальным и своевременным.
 
 Для получения дополнительной информации, пожалуйста, обратитесь к link:https://docs.freebsd.org/ru/articles/freebsd-status-report-process/#_timeline[].
 
