--- a/website/content/ru/status/report-2025-10-2025-12/libvirt.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/libvirt.adoc
@@ -24,7 +24,7 @@ link:https://libvirt.org/drvbhyve.html[libvirt: Драйвер Bhyve] URL: link:
 ** Поддержки arm64.
 ** Поддержки virtio-scsi.
 ** Поддержки конфигурации NUMA для гостевых систем.
-* Улучшить поддержку virt-manager на FreeBSD.
+* Улучшить поддержку virt-manager в FreeBSD.
 
 Спонсор: Фонд FreeBSD
 
