--- a/website/content/ru/status/report-2025-10-2025-12/mongodb80.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/mongodb80.adoc
@@ -6,7 +6,7 @@ link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=287546[PR для Bazel 8]
 
 Контакт: Ronald Klop <ronald@FreeBSD.org>
 
-MongoDB — это NoSQL-база данных производственного уровня.
+MongoDB — это NoSQL-база данных промышленного уровня.
 В наших портах уже много лет существует Community Edition MongoDB.
 MongoDB используется в портах различного программного обеспечения для контроллеров WiFi, таких как Unifi и Omada.
 Начиная с версии MongoDB 8.0.13, система сборки изменена с SCons на Bazel.
@@ -15,7 +15,7 @@ MongoDB используется в портах различного прогр
 С этой версией сборка MongoDB 8.0 запускается.
 К сожалению, сборка довольно быстро завершается ошибкой.
 
-Из-за проблем безопасности в порту MongoDB 8.0 становится важным обновить порт до последней версии.
+Из-за проблем с безопасностью в порту MongoDB 8.0 становится важным обновить порт до последней версии.
 
 Я ищу кого-нибудь с опытом сборки с помощью Bazel для помощи.
 
