--- a/website/content/ru/status/report-2025-10-2025-12/qemu-vmm-accelerator.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/qemu-vmm-accelerator.adoc
@@ -25,7 +25,7 @@ link:https://github.com/dumrich/qemu.git[Код (форк QEMU)] URL: https://gi
 
 - Поддержка гостевых SMP: В настоящее время гостевая система ограничена 1 vCPU.
   Мы ищем помощь в отладке существующей обработки циклов/потоков в бэкенде для включения поддержки многопроцессорности.
-- Вынос устройств (Device Offloading): Таймеры RTC и HPET в настоящее время все еще эмулируются в пользовательском пространстве QEMU.
+- Вынос устройств (Device Offloading): Таймеры RTC и HPET в настоящее время всё ещё эмулируются в пользовательском пространстве QEMU.
   Их необходимо переработать для использования внутриядерных версий из `vmm` для лучшей производительности и корректности.
 - Общая стабильность: Как и для любого бэкенда гипервизора, нам нужна помощь в тестировании граничных случаев и стресс-тестировании с различными типами гостевых ОС.
 
