--- a/website/content/ru/status/report-2025-10-2025-12/releng.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/releng.adoc
@@ -1,18 +1,18 @@
-=== Команда управления релизами FreeBSD
+=== Команда подготовки релизов FreeBSD
 
 Ссылки: +
 link:https://www.freebsd.org/releases/15.0R/announce/[Анонс FreeBSD 15.0-RELEASE] URL: link:https://www.freebsd.org/releases/15.0R/announce/[] +
-link:https://www.freebsd.org/releases/14.4R/schedule/[Расписание FreeBSD 14.4-RELEASE] URL: link:https://www.freebsd.org/releases/14.4R/schedule/[] +
+link:https://www.freebsd.org/releases/14.4R/schedule/[График подготовки релиза FreeBSD 14.4-RELEASE] URL: link:https://www.freebsd.org/releases/14.4R/schedule/[] +
 link:https://download.freebsd.org/releases/ISO-IMAGES/[Релизы FreeBSD] URL: link:https://download.freebsd.org/releases/ISO-IMAGES/[] +
 link:https://download.freebsd.org/snapshots/ISO-IMAGES/[Экспериментальные сборки FreeBSD] URL: link:https://download.freebsd.org/snapshots/ISO-IMAGES/[]
 
-Контакт: Команда управления релизами FreeBSD, <re@FreeBSD.org>
+Контакт: Команда подготовки релизов FreeBSD, <re@FreeBSD.org>
 
-Команда управления релизами FreeBSD отвечает за установление и публикацию расписаний релизов для официальных выпусков проекта FreeBSD, анонсирование заморозок кода и поддержку соответствующих веток, среди прочего.
+Команда подготовки релизов FreeBSD отвечает за формирование и публикацию графиков подготовки релизов для официальных выпусков проекта FreeBSD, анонсирование заморозок кода и поддержку соответствующих веток, кроме всего прочего.
 
 Команда провела работу над 15.0-RELEASE, что привело к созданию официального релиза и его анонсу в декабре; это был первый релиз из новой ветки *stable/15*.
-В рамках этой работы было проделано значительные усилия по настройке системы для безопасной сборки, подписания и распространения репозиториев пакетов для базовой системы 15.0-RELEASE.
+В рамках этой работы были проделаны значительные усилия по настройке системы для безопасной сборки, подписания и распространения репозиториев пакетов для базовой системы 15.0-RELEASE.
 
 Началось планирование предстоящего цикла 14.4-RELEASE.
 
-Команда управления релизами продолжила предоставлять еженедельные экспериментальные сборки для веток *main*, *stable/14* и *stable/13*, а также начала предоставлять еженедельные экспериментальные сборки для новой ветки *stable/15*.
+Команда подготовки релизов продолжила выпускать еженедельные экспериментальные сборки для веток *main*, *stable/14* и *stable/13*, а также начала публиковать еженедельные экспериментальные сборки для новой ветки *stable/15*.
