--- a/website/content/ru/status/report-2025-10-2025-12/openjdk.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/openjdk.adoc
@@ -1,5 +1,5 @@
 [[_improve_openjdk_on_freebsd]]
-=== Улучшение OpenJDK на FreeBSD (Improve OpenJDK on FreeBSD)
+=== Улучшение OpenJDK в FreeBSD (Improve OpenJDK on FreeBSD)
 
 Ссылки: +
 link:https://freebsdfoundation.org/project/improving-openjdk-on-freebsd/[Описание проекта] URL: https://freebsdfoundation.org/project/improving-openjdk-on-freebsd/[] +
@@ -29,18 +29,18 @@ Java — важная среда выполнения для многих выс
 * Помечены как устаревшие порты OpenJDK, link:https://reviews.freebsd.org/D54176[больше не поддерживаемые] вышестоящим проектом.
   Порты будут объявлены устаревшими и удалены в течение первой половины 2026 года, после чего останутся только версии LTS и последние поддерживаемые порты.
 
-Другие заметки:
+Другие примечания:
 
-* Потратил некоторое время на изучение link:https://github.com/battleblow/jdk25u/pull/4[истории системного вызова `getrlimitusage(2)`], обнаружив, что он доступен начиная с версии 14.2, несмотря на то, что справочная страница (man page) утверждает, что он впервые появился в версии 15.
+* Потратил некоторое время на изучение link:https://github.com/battleblow/jdk25u/pull/4[истории системного вызова `getrlimitusage(2)`], обнаружив, что он доступен начиная с версии 14.2, несмотря на то, что страница Справочника утверждает, что он впервые появился в версии 15.
   Смотрите также link:https://reviews.freebsd.org/D53320[соответствующую рецензию от emaste].
   Это было важно, потому что link:https://www.freebsd.org/status/report-2025-07-2025-09/#_improve_openjdk_on_freebsd[улучшения производительности из предыдущего квартала] полагаются на этот системный вызов.
   Знание того, что он доступен для всех текущих поддерживаемых версий FreeBSD, означает, что нам не нужно оставлять код для возврата к менее эффективным способам получения той же информации.
-* Обновления, внесенные в реализацию отладочного средства Hotspot Serviceability Agent для Mac OS X, сломали реализацию для BSD.
-  Из-за истории эти реализации используют одни и те же исходные файлы и каталоги, несмотря на несколько разные реализации.
+* Обновления, внесённые в реализацию отладочного средства Hotspot Serviceability Agent для Mac OS X, привели к неработоспособности реализации для BSD.
+  По историческим соображениям эти реализации используют одни и те же исходные файлы и каталоги, несмотря на несколько разные реализации.
   Начата link:https://bugs.openjdk.org/browse/JDK-8374372[работа] по перемещению кода OS X в отдельную реализацию, чтобы мы могли работать над реализацией для BSD, не мешая друг другу.
-* Возобновлена работа по изменению способа начальной загрузки (bootstrap) сборок OpenJDK в системе портов.
+* Возобновлена работа по изменению способа начальной загрузки сборок OpenJDK в системе портов.
   Эта работа снова стала более актуальной, поскольку объявление неподдерживаемых портов устаревшими нарушает предыдущее предположение о том, что для сборки текущей версии OpenJDK можно было полагаться на предыдущую версию.
-  Новый механизм начальной загрузки должен быть внедрен до фактического удаления существующих портов.
+  Новый механизм начальной загрузки должен быть внедрён до фактического удаления существующих портов.
 * В начале этого квартала я потерял доступ к своей тестовой системе на Aarch64, поэтому не мог тестировать на этой архитектуре так хорошо, как хотелось бы.
   Эта ситуация теперь исправлена, и я нахожусь в процессе настройки новой системы для сборки и тестирования.
 
