--- a/website/content/ru/status/report-2025-10-2025-12/suspend.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/suspend.adoc
@@ -1,5 +1,5 @@
 [[_suspendresume_improvement]]
-=== Улучшение приостановки/возобновления работы (Suspend/Resume)
+=== Улучшение функций системы приостановки/возобновления работы (Suspend/Resume)
 
 Ссылки: +
 link:https://obiw.ac/s0ix/[Блог] URL: link:https://obiw.ac/s0ix/[] +
@@ -9,14 +9,14 @@ link:https://reviews.freebsd.org/D48721[Ключевая часть стека s
 
 Контакт: obiwac <obiwac@FreeBSD.org>
 
-В FreeBSD ведется работа по добавлению поддержки режима "приостановка в бездействие" (suspend-to-idle) и сна S0ix.
+В FreeBSD ведётся работа по добавлению поддержки режима "приостановка в бездействие" (suspend-to-idle) и сна S0ix.
 
 Это позволит современным ноутбукам на Intel и AMD, некоторые из которых не поддерживают сон ACPI S3, переходить в состояния с низким энергопотреблением для увеличения времени автономной работы.
 
-Вход в состояние S0i3 теперь работает полунадежно на ноутбуках Framework 13 с AMD Ryzen 7040 под управлением FreeBSD 15.
+Вход в состояние S0i3 теперь работает с частичной надёжностью на ноутбуках Framework 13 с AMD Ryzen 7040 под управлением FreeBSD 15.
 
-Код типа сна и sysctl был закоммичен, и было внесено исправление для регрессии, которую он вызвал (link:https://reviews.freebsd.org/D53909[D53909]).
-Из-за некоторых существующих проблем в нашем коде D-state ACPI, из-за которых некоторые ранее работавшие устройства перестали входить в состояние S3, связанные коммиты изменений D-state, необходимых для S0ix, пришлось откатить, хотя, похоже, это не влияет на вход в S0i3 на вышеупомянутой машине.
+Код типа сна и sysctl был закоммичен, и было внесено исправление проблемы, которую он вызвал (link:https://reviews.freebsd.org/D53909[D53909]).
+Из-за некоторых существующих проблем в нашем коде D-state ACPI, из-за которых некоторые ранее работавшие устройства перестали входить в состояние S3, связанные коммиты изменений D-state, необходимых для S0ix, пришлось отменить, хотя, похоже, это не влияет на вход в S0i3 на вышеупомянутой машине.
 Проводилась работа по очистке и исправлению нашего кода D-state, но это не является большим приоритетом, если это не препятствует входу в S0i3 на целевой(ых) машине(ах).
 
 Ревизии для s2idle и SPMC (link:https://reviews.freebsd.org/D48734[D48734] и link:https://reviews.freebsd.org/D48387[D48387] соответственно) были рассмотрены, и была проделана некоторая работа по подготовке их к коммиту.
@@ -24,7 +24,7 @@ link:https://reviews.freebsd.org/D48721[Ключевая часть стека s
 
 Возникли некоторые проблемы при возобновлении работы из S0i3, по-видимому, только при загрузке драйвера USB4, которые были исследованы.
 
-Доступен предварительно собранный образ для тестирования режимов сна, чтобы легко проверить вход в S0i3 на машинах.
+Доступен предварительно собранный образ для тестирования режимов сна, облегчающий проверку входа в S0i3 на машинах.
 Подробные инструкции находятся на link:https://obiw.ac/s0ix/[веб-странице].
 
 Что касается ссылок, запись в блоге все еще устарела.
