Status/2025Q4/bananapi-r64-r2-pro-drivers.adoc: update report

--- a/website/content/en/status/report-2025-10-2025-12/bananapi-r64-r2-pro-drivers.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/bananapi-r64-r2-pro-drivers.adoc
@@ -1,4 +1,4 @@
-=== FreeBSD Driver Development for BananaPi-R64
+=== FreeBSD Driver Development for BananaPi-R64/R2-PRO
 
 Links: +
 link:https://wiki.freebsd.org/arm/Bananapi[Wiki] URL: link:https://wiki.freebsd.org/arm/Bananapi[]
@@ -9,7 +9,7 @@ Contact: Martin Filla <freebsd@sysctl.cz>
 
 The Banana Pi R64 is a MediaTek MT7622-based development board (ARM Cortex-A53, dual-core ~1.35 GHz) featuring 4× Gigabit LAN, 1× Gigabit WAN, Wi-Fi (4×4n), Bluetooth 5.0, and multiple peripheral interfaces (UART, SPI, I²C, GPIO, SATA, mini-PCIe, eMMC, etc.).
 
-==== Current State of FreeBSD Support
+==== Current State of FreeBSD Support R64
 
 Implemented so far:
 
@@ -26,7 +26,7 @@ Implemented so far:
 - **Pciecfg driver**
 - **SysIRQ driver**
 
-==== Development roadmap
+==== Development roadmap R64
 
 Implement missing drivers:
 
@@ -40,5 +40,36 @@ Implement missing drivers:
 - PCIE
 
 Work in progress drivers:
-
 - T-PHY
+
+
+==== Introduction
+
+The Banana Pi BPI-R2 Pro is the next generation smart router developement board. It is powered by Rockchip RK 3568 processor.Onboard 2GB LPDDR4 memory and 16GB eMMC storage, and supports 2 USB 3.0 interface, 5 gigabit network port. M.2 key-E and mini PCIe interface, 2 mipi DSI interface(one can change to LVDS by software), 1 CSI camera interface,1 HDMI output.
+
+==== Current State of FreeBSD Support R2-PRO
+
+Implemented so far:
+
+- **UART driver**
+- **Clock management (clocks)**
+- **Pinctrl**
+- **GPIO**
+- **Storage controllers (eMMC/SD/MMC) driver**
+- **XHCI driver**
+- **Watchdog driver**
+- **PCIE driver**
+
+==== Development roadmap R2-PRO
+
+Implement missing drivers:
+- HDMI
+- MIPI
+- USB3
+- M.2
+
+Work in progress drivers:
+- AHCI/SATA
+- PCIE
+
+
