--- a/website/content/en/releases/14.4R/relnotes.adoc
+++ b/website/content/en/releases/14.4R/relnotes.adoc
@@ -119,6 +119,14 @@ This section lists the various Security Advisories and Errata Notices since {rel
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-26:02.jail.asc[FreeBSD-SA-26:02.jail]
 |27 January 2026
 |Jail escape by a privileged user via nullfs
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-26:04.asc[FreeBSD-SA-26:04]
+| 24 February 2026
+| Jail chroot escape via fd exchange with a different jail
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-26:05.asc[FreeBSD-SA-26:05]
+| 24 February 2026
+| Local DoS and possible privilege escalation via routing sockets
 |===
 
 [[errata]]
@@ -224,6 +232,20 @@ gitref:527027da391d[repository=src].
 The man:swapon[8] utility now supports encrypted swap files using man:md[4] devices with an [.filename]#.eli# suffix in man:fstab[5]. This allows encrypted swap to be configured in fstab as previously documented.
 gitref:9d80d681ee9d[repository=src].
 
+The man:diff[1] utility now reports I/O errors encountered during the Stone algorithm's file comparison phase, providing error messages where previously only the exit status indicated failure.
+gitref:3c10ed2ba3aa[repository=src].
+{{< sponsored "Klara, Inc." >}}
+
+The man:diff[1] utility no longer incorrectly compares a file or directory to itself, fixing a bug where diff could produce misleading output. In addition, several internal correctness and robustness improvements were made (see related commits), including fixes for resource leaks in the pagination code, improved error handling around file descriptor operations, and prevention of potential integer overflows when using very large context windows. Additional tests were added to cover these cases.
+gitref:b4139147bbb7[repository=src],
+gitref:6761e555376e[repository=src],
+gitref:2434f3b279a9[repository=src],
+gitref:238bf5ebf684[repository=src].
+{{< sponsored "Klara, Inc." >}}
+
+The Bluetooth startup script man:rc.d/bluetooth[8] now retries the hccontrol reset up to three times for improved reliability and fixes a redirection bug that could create stray files.
+gitref:53d1c328e912[repository=src].
+
 [[userland-contrib]]
 === Contributed Software
 
@@ -306,6 +328,9 @@ gitref:e52f11f4bbc8[repository=src].
 
 The man:nc[1] (or netcat) utility now accepts service names (e.g., 'http') in addition to port numbers for the -p option and as command-line arguments.
 gitref:0fe58344e829[repository=src].
+
+The blocklist utility (man:blacklistd[8]) has been updated with upstream changes as part of the rename from blacklist to blocklist.
+gitref:4690a369ff6d[repository=src].
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
@@ -448,6 +473,9 @@ This section describes changes that affect networking in FreeBSD.
 Compatibility code for IPFW versions prior to FreeBSD 8 has been removed to simplify the codebase. Users or third-party modules that still rely on the old compatibility interfaces must migrate before upgrading.
 gitref:57865e505aef[repository=src].
 {{< sponsored "The FreeBSD Foundation" >}}
+
+[.filename]#sbin/ipfw15# binary has been added with updated KBI for compatibility with 15.0+ kernels. The original man:ipfw[8] binary detects the new KBI and automatically runs ipfw15, ensuring firewall rules can be loaded during upgrades. The utility is also installed as [.filename]#/sbin/dnctl15# for dummynet compatibility.
+gitref:969e2b406835[repository=src].
 
 [[wireless-networking]]
 === Wireless Networking
