--- a/website/content/en/releases/14.4R/schedule.adoc
+++ b/website/content/en/releases/14.4R/schedule.adoc
@@ -39,7 +39,7 @@ General discussions about the pending release and known issues should be sent to
 |BETA1 builds begin |6 February 2026 |6 February 2026 |First beta test snapshot.
 |BETA2 builds begin |13 February 2026 |13 February 2026 |Second beta test snapshot.
 |BETA3 builds begin |20 February 2026 |20 February 2026 |Third beta test snapshot.
-|RC1 builds begin |27 February 2026 |- |First release candidate.
+|RC1 builds begin |27 February 2026 |27 February 2026 |First release candidate.
 |RELEASE builds begin |6 March 2026 |- |{localRel}-RELEASE builds begin.
 |RELEASE announcement |10 March 2026 |- |{localRel}-RELEASE press release.
 |{localRelPrev} EoL |30 June 2026 |- |{localRelPrev}-RELEASE no longer supported.
