--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1660,7 +1660,7 @@ Many manuals have had this section added or reworded in this release.
 Much work has gone into adding man:sysctl[8]s and environment variables to the manual.
 Try searching for them with `apropos Va=here.is.the.sysctl` or `apropos Ev=here_is_the_environment_variable`.
 
-The man:intro[1] to the General Commands manual has been revised, incorporating a statement about installing additional commands, and a listing of cannonical command directories.
+The man:intro[1] to the General Commands manual has been revised, incorporating a statement about installing additional commands, and a listing of canonical command directories.
 gitref:cc0af6d5a6c2[repository=src]
 
 The man:intro[2] to the System Calls manual has been revised, incorporating links and a HISTORY section from OpenBSD.
