--- a/website/content/en/releases/14.4R/relnotes.adoc
+++ b/website/content/en/releases/14.4R/relnotes.adoc
@@ -386,7 +386,7 @@ This section covers changes and additions to devices and device drivers since {r
 [[drivers-device]]
 === Device Drivers
 
-The man:mr_sas[4] driver now supports the Fujitsu RAID Controller SAS 6Gbit/s 1GB (D3116), which is used in Fujitsu PRIMERGY servers like the RX300 S7.
+The man:mrsas[4] driver now supports the Fujitsu RAID Controller SAS 6Gbit/s 1GB (D3116), which is used in Fujitsu PRIMERGY servers like the RX300 S7.
 gitref:653099bcc191[repository=src].
 
 The man:mfi[4] driver now supports the Fujitsu RAID Controller SAS 6Gbit/s 1GB (D3116) by adding its subvendor and subdevice IDs.
